--- a/app/src/main/res/layout/activity_landing_screen.xml
+++ b/app/src/main/res/layout/activity_landing_screen.xml
@@ -86,6 +86,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/third_white"
